# zxing-cpp

./: .gitignore  CMakeLists.txt  Jenkinsfile  build_release_android.sh  conanfile.py
core/: CMakeLists.txt  ZXingConfig.cmake.in
core/src/: BitMatrix.cpp  BitMatrix.h  Content.h  DetectorResult.h  GridSampler.cpp  GridSampler.h  Result.cpp  Result.h  Utf.cpp
core/src/datamatrix/: DMDecoder.cpp  DMDetector.cpp  DMReader.cpp
debug/: DebugReadbardcode.cpp
test/blackbox/: BlackboxTestRunner.cpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
wrappers/ios/: CMakeLists.txt  ZXingReader.cpp  build-release.sh
wrappers/ios/include/: ZXingReader.h
wrappers/python/: CMakeLists.txt  zxing.cpp
